--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ header p {
 /* section styles */
 section {
 	display: flex;
+	width: 15%;
 	justify-content: space-between;
 	margin-bottom: 5rem;
 }
