--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
 body {
+	background-image: url('../images/backgroundPic.png');
+	color: aliceblue;
 	font-family: sans-serif;
 	font-size: 150%;
 	line-height: 1.4;
@@ -24,7 +26,6 @@ header p {
 /* section styles */
 section {
 	display: flex;
-	width: 80%;
 	justify-content: space-between;
 	margin-bottom: 5rem;
 }
