--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ header p {
 /* section styles */
 section {
 	display: flex;
+	margin: auto 5%;
 	justify-content: space-between;
 	margin-bottom: 5rem;
 }
@@ -33,7 +34,7 @@ section article {
 	border: 1px solid black;
 	box-shadow: 0 2px 14px grey;
 	padding: 2.5%;
-	width: 25%
+	width: auto;
 }
 article img {
 	display: block;
