--- a/css/styles.css
+++ b/css/styles.css
@@ -26,9 +26,8 @@ header p {
 /* section styles */
 section {
 	display: flex;
-	margin: auto 5%;
+	margin: auto 5% auto 5%;
 	justify-content: space-between;
-	margin-bottom: 5rem;
 }
 section article {
 	border: 1px solid black;
